--- a/week1&2.html
+++ b/week1&2.html
@@ -1,23 +1,39 @@
-<h2>Scanning Activity</h2>
+<h2 style="color:rgb(207, 59, 155)" h2>Scanning Activity</h2>
 Use these basic tools and make a list that details the following information
-<br>Q1) How many hops from your machine to your assigned website?<br>
-<img src="images/Screenshot1.png" alt="">
-<br><br>
-Q2) which step causes the biggest delay in the route? What is the average duration of that delay?
-<br><img src="images/Screenshot 2.png" alt="">
-<br><br>
-Q3) what are the main nameservers for the website?<br>
-<img src="images/Screenshot 2022-11-02 135010.png" alt="">
-<br><br>
-Q4) Who is the registered contact?<br>
-<img src="images/puzzy.png" alt="">
-<br><br>
-Q5) What is the MX record for the website?<br>
-<img src="images/rashid.png" alt=""><br>
-Q6) Where is the website hosted?<br>
-<img src="images/gbenga.png" alt=""><br>
+<b style="color:rgb(207, 59, 155)">
 
-<h2>reflection</h2>
-<br>i used tracert for my question 1 instead of traceroute due to some challeges
-finding question 2 was a little hard,i experienced some challenges what my dig then i had to surf the internet and found
-whois i installed it on my laptop which made it easer for me to scan
+    <p style="color:rgb(207, 59, 155)"> Q1) "How many hops from your machine to your assigned website?</br></p>
+    <img src=" images/Screenshot kb.png" alt="">
+    <br><br>
+    <p style="color:rgb(207, 59, 155)">Q2) which step causes the biggest delay in the route? What is the average
+        duration of
+        that delay?</p>
+    <br><img src="images/Screenshot rc.png" alt="">
+    <br><br>
+    <p style="color:rgb(207, 59, 155)">Q3) what are the main nameservers for the website?<br></p>
+    <img src="images/Screenshot 2022-11-02 135010.png" alt="">
+    <br><br>
+    <p style="color:rgb(207, 59, 155)">Q4) Who is the registered contact?<br></p>
+    <img src="images/puzzy.png" alt="">
+    <br><br>
+    <p style="color:rgb(207, 59, 155)">Q5) What is the MX record for the website?<br></p>
+    <img src="images/rashid.png" alt=""><br>
+    <p style="color:rgb(207, 59, 155)">Q6) Where is the website hosted?<br></p>
+    <img src="images/gbenga.png" alt=""><br>
+    <img src="images/Screenshot qz.png" alt=""><br>
+    <p> Traceroute is one of the best OS-native network analytics tools. It is not only capable of testing
+        connectivity.
+        but it also finds all hops in between source and destination, including names, and delay times.</p>
+
+    <p>
+    <h2 style="color:rgb(207, 59, 155)">reflection</h2>
+    </p>
+    <br>
+
+    <p>i used tracert for my question 1 instead of traceroute due to some challeges
+        finding question 2 was a little hard,i experienced some challenges what my dig then i had to surf the
+        internet and found
+        whois i installed it on my laptop which made it easer for me to scan
+
+        From this course I now know most ping command how to use them and what is for I need not have much issue with my
+        scanning activity.</p>
